# django-basic

./: Todo.MD  pyproject.toml
basic_app/: asgi.py  settings.py  urls.py  wsgi.py
blog/: forms.py  models.py  urls.py
blog/migrations/: 0001_initial.py  0002_comment_author_post_author_alter_comment_post.py
blog/views/: comment_view.py  post_view.py
common/: backends.py  forms.py  views.py
templates/: login.html  signup.html
templates/blog/: create.html  index.html  show.html  update.html
templates/layout/: base.html
theme/static_src/: package-lock.json
