[project]
name = "basic-app"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "black>=25.11.0",
    "django>=5.2.8",
    "django-debug-toolbar>=6.1.0",
    "django-tailwind[cookiecutter,honcho,reload]>=4.4.1",
    "honcho>=2.0.0",
    "psycopg2>=2.9.11",
    "ruff>=0.14.6",
]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "myproject.settings"
